--- a/css/style_tks.css
+++ b/css/style_tks.css
@@ -1,1 +1,19 @@
-
+.t1{
+    font-size: 80px;
+    color: yellow;
+}
+.t2{
+    color: seashell;
+}
+a{
+        color: white;
+        text-decoration: unset;
+}
+a:active{
+    color:white;
+    text-decoration: underline;
+}
+a:hover{
+    color:rgb(0, 0, 0);
+    text-decoration: underline;
+}
