--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
-@media only screen and (min-device-width: 400px) {
+@media (max-width: 939px) {
     body {
-      background-image: url('../iPhoneSE4.svg');
+        background: url(../iPhoneSE4.svg);
     }
-  }
+    
+}
+
+@media (min-width: 939px) {
+    body {
+        background: #ffffff;
+    }
+
+}
