--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,6 @@
-@media (max-width: 939px) {
-    body {
-        background: url(../iPhoneSE4.svg);
+@media screen and (max-width:400px) {
+    .fundo {
+        src: url(../iPhoneSE4.svg);
     }
     
-}
-
-@media (min-width: 939px) {
-    body {
-        background: #ffffff;
-    }
-
 }
