--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ ul li:before {
 }
 
 @media only screen and (max-width: 479px){
-    
+
 }
 
 p{
@@ -11,4 +11,39 @@ p{
     text-align: center;
     font-size: 60px;
     margin-top: 0px;
+}
+
+.rede {
+    width: 80px;
+    height: 80px;
+    float: left;
+    margin-right: 20px;
+    transition: all 0,4s ease-out;
+    padding-top: 8px;
+    padding-left: 8px;
+}
+
+.rede#facebook{
+    background-color: #761498;
+    border-radius: 50%;
+}
+
+.rede#instagram{
+  background-color: #761498;
+  border-radius: 50%;
+}
+
+.rede:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
+  box-shadow: 4px 30px 16px 0px rgba(50, 50, 50, 0.45)
+}
+
+.icone {
+  height: 60px;
+}
+
+#logodesk:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
 }
