--- a/css/style_tks.css
+++ b/css/style_tks.css
@@ -1,14 +1,9 @@
-.t1{
-
-    font-size: 60px;
-}
-
-.t2{
-    color: seashell;
-}
-a{
-        color: white;
-        text-decoration: unset;
+#intro{
+  background: url('../backgroundweb/Vector_11.svg');
+  position: relative;
+  top: 6em;
+  height: 929px;
+  left: -2px;
 }
 a:active{
     color:white;
@@ -19,11 +14,7 @@ a:hover{
     text-decoration: underline;
 }
 
-.intro_2{
-    background-image: url("../images/banner_1.jpg");
-    color: white;
-    opacity: 0.8;
-}
+
 .fra_1{
     font-stretch: 1px;
 }
