--- a/css/desktop.css
+++ b/css/desktop.css
@@ -17,6 +17,17 @@ body{
 
 }
 
+#logodesk {
+    max-width: 280px;
+    height: auto;
+}
+
+#social{
+    margin-top: 20px;
+    max-height: 60px;
+    padding-right: 30px;
+    float: right;
+  }
 
 #cabecalho{
     width: 100%;
