--- a/css/mobile.css
+++ b/css/mobile.css
@@ -48,7 +48,7 @@ body{
   text-align: left;
   color: #ffffff;
   font-family: 'Quicksand', sans-serif; 
-  font-weight: normal;
+  font-weight: bold;
   font-size: 28px;
   padding-bottom: 20px;
   max-width: 640px;
