--- a/css/mobile.css
+++ b/css/mobile.css
@@ -188,6 +188,16 @@ p{
   padding-right: 20px;
 }
 
+#social:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
+}
+
+#logodesk:hover {
+  cursor: pointer;
+  transform: translateY(-10px);
+}
+
 
 
 
