--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,175 +1,1 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-
-@font-face{
-    font-family: "Roboto";
-    src: url("../fonts/Roboto/Roboto-Regular.ttf") format("ttf");
-    font-weight: normal;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap');
-
-body{
-    max-width: 2000px;
-    height: 100%;
-
-}
-
-#logodesk {
-    max-width: 280px;
-    height: auto;
-}
-
-#social{
-    margin-top: 20px;
-    max-height: 60px;
-    padding-right: 30px;
-    float: right;
-}
-
-#social:hover {
-    cursor: pointer;
-    transform: translateY(-10px);
-}
-
-#logodesk:hover {
-    cursor: pointer;
-    transform: translateY(-10px);
-}
-
-#cabecalho{
-    width: 100%;
-}
-
-#banner1 {
-    background: #6316a3;
-    width: 100%;
-}
-
-#chamadaDesktop{
-    text-align: left; 
-    font-family: 'Quicksand', sans-serif; 
-    font-weight: bold; 
-    font-size: 58;
-    padding-top: 50px;
-    padding-bottom: 30px;
-    color: #fff;
-    padding-left: 40px;
-}
-
-#chamadaDesktop2{
-    text-align: left; 
-    font-family: 'Roboto', sans-serif; 
-    font-weight: 400; 
-    font-size: 32px;
-    padding-bottom: 110px;
-    color: #fff;
-    padding-left: 40px;
-}
-
-#banner2 {
-    text-align: center;
-    width: 100%;
-    
-}
-
-#maratonaBeloved{
-    font-family: "Quicksand";
-    font-size: 48px;
-    font-weight: bold;
-    color: #3F3e3e;
-    padding-top: 60px;
-    padding-bottom: 20px;
-    width: 100%;
-}
-
-#tresEmails {
-    font-family: "Roboto";
-    font-size: 32px;
-    font-weight: 400;
-    color: #646464;
-    padding-bottom: 40px;
-    width: 100%;
-
-}
-
-#atividades{
-    font-family: "Roboto";
-    font-size: 26px;
-    color: #646464;
-    font-weight: 400;
-    padding-top: 20px;
-}
-
-#activities {
-    padding-bottom: 140px;
-    width: 100%;
-}
-
-#controleSeuTempo {
-    background: #74549f;
-    width: 100%;
-    
-
-}
-
-#cadastro {
-    background: #ffffff;
-    border-radius: 2px;
-}
-
-#controleTempo {
-    text-align: left; 
-    font-family: 'Quicksand', sans-serif; 
-    font-weight: bold; 
-    font-size: 58;
-    padding-top: 70px;
-    padding-bottom: 30px;
-    color: #fff;
-    margin-left: 40px;
-    width: 100%;
-}
-
-#containerForm {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    width: 100%;
-    
-}
-
-#tecnicas {
-    font-family: 'Roboto';
-    font-size: 30px;
-    font-weight: 400;
-    text-align: left;
-    color: #fff;
-    float: left;
-    margin-left: 20px;
-}
-
-p{
-    color: #ffffff;
-    text-align: center;
-    font-size: 60px;
-    font-family: "Quicksand";
-    font-weight: bold;
-    margin-top: 0px;
-}
-
-
-
-#contador {
-    width: 100%;
-    background: #6316a3; 
-    padding-top: 20px;
-    padding-bottom: 3px;
-}
-
-#clock{
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-
+*{padding:0;margin:0}@font-face{font-family:Roboto;src:url(../fonts/Roboto/Roboto-Regular.ttf) format("ttf");font-weight:400}@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap");body{max-width:2000px;height:100%}#logodesk{max-width:280px;height:auto}#social{margin-top:20px;max-height:60px;padding-right:30px;float:right}#logodesk:hover,#social:hover{cursor:pointer;transform:translateY(-10px)}#banner1,#cabecalho{width:100%}#banner1{background:#6316a3}#chamadaDesktop{font-family:Quicksand,sans-serif;font-weight:700;font-size:58;padding-top:50px;padding-bottom:30px}#chamadaDesktop,#chamadaDesktop2{text-align:left;color:#fff;padding-left:40px}#chamadaDesktop2{font-family:Roboto,sans-serif;font-weight:400;font-size:32px;padding-bottom:110px}#banner2{text-align:center;width:100%}#maratonaBeloved{font-family:Quicksand;font-size:48px;font-weight:700;color:#3f3e3e;padding-top:60px;padding-bottom:20px;width:100%}#tresEmails{font-size:32px;padding-bottom:40px;width:100%}#atividades,#tresEmails{font-family:Roboto;font-weight:400;color:#646464}#atividades{font-size:26px;padding-top:20px}#activities{padding-bottom:140px;width:100%}#controleSeuTempo{background:#74549f;width:100%}#cadastro{background:#fff;border-radius:2px}#controleTempo{text-align:left;font-family:Quicksand,sans-serif;font-weight:700;font-size:58;padding-top:70px;padding-bottom:30px;color:#fff;margin-left:40px;width:100%}#containerForm{padding-top:40px;padding-bottom:40px;width:100%}#tecnicas{font-family:Roboto;font-size:30px;font-weight:400;text-align:left;color:#fff;float:left;margin-left:20px}p{color:#fff;text-align:center;font-size:60px;font-family:Quicksand;font-weight:700;margin-top:0}#contador{width:100%;background:#6316a3;padding-top:20px;padding-bottom:3px}#clock{position:absolute;bottom:0;right:0}
