--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,209 +1,1 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-
-@font-face{
-  font-family: "Roboto";
-  src: local("../fonts/Roboto/Roboto-Regular.ttf") format("ttf");
-  font-weight: normal;
-}
-
-@font-face{
-  font-family: "Quicksand";
-  src: local("../fonts/Quicksand/Quicksand-Medium.ttf") format("ttf");
-  src: url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap") format("ttf");
-  font-weight: normal;
-}
-
-@font-face{
-  font-family: "Quicksand";
-  src: local("../fonts/Quicksand/Quicksand-Bold.ttf") format("ttf");
-  font-weight: bold;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Quicksand:wght@600&display=swap');
-
-
-body{
-  max-width: 920px;
-  height: auto;
-}
-
-#logodesk {
-  max-width: 280px;
-  max-height: 186px;
-}
-
-#container1{
-  width: 100%;
-  background: #6316a3;
-  padding-top: 80px;
-  display: inline-block;
-  width: calc(100% - 1px);
-}
-
-#chamada1{
-  text-align: left;
-  color: #ffffff;
-  font-family: 'Quicksand', sans-serif; 
-  font-weight: bold;
-  font-size: 28px;
-  padding-bottom: 20px;
-  max-width: 640px;
-}
-
-#chamada2{
-  padding-top: 20px;
-  text-align: left;
-  color: #ffffff;
-  font-family: 'Roboto', sans-serif; 
-  font-weight: 400;
-  font-size: 16px;
-  padding-bottom: 50px;
-  max-width: 640px;
-}
-
-#containerRelogio {
-  width: 100%;
-  background: #6316a3;
-  position: relative;
-  min-height: 210px;
-  display: inline-block;
-  width: calc(100% - 1px);
-}
-
-#relogio {
-  width: 320;
-  height: 186;
-  background: #6316a3;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-#container2{
-  background: #ffffff;
-  padding-top: 30px;
-  padding-bottom: 80px;
-}
-
-#maratonaBeloved {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  color: #3F3e3e;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-#tresEmails {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #3F3e3e;
-  text-align: center;
-  padding-bottom: 15px;
-}
-
-#ativText {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #646464;
-  text-align: center;
-  padding-bottom: 15px;
-}
-
-#ativImg {
-  max-height: 50;
-  padding-bottom: 15px;
-}
-
-#container3 {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: #74549f;
-}
-
-#controleTempo {
-  font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  color: #ffffff;
-  padding-bottom: 15px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-#dicasImg {
-  max-height: 40px;
-  padding-bottom: 15px;
-}
-
-#dicas {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  color: #ffffff;
-  text-align: center;
-  padding-bottom: 15px;
-}
-
-#container4{
-  background: #6316a3;
-  padding-top: 15px;
-  padding-bottom: 10px;
-}
-
-p{
-  margin: 0;
-  padding-top: 10px;
-  color: #ffffff;
-  text-align: center;
-  font-size: 20px;
-  font-family: "Quicksand", sans-serif;
-  font-weight: bold;
-}
-
-#container5{
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: #ffffff;
-  text-align: center;
-}
-
-#receba{
-  font-family: 'Quicksand', sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  color: #6316a3;
-  padding-bottom: 15px;
-  text-align: center;
-}
-
-#social{
-  max-height: 40px;
-  padding-right: 20px;
-}
-
-#social:hover {
-  cursor: pointer;
-  transform: translateY(-10px);
-}
-
-#logodesk:hover {
-  cursor: pointer;
-  transform: translateY(-10px);
-}
-
-
-
-
-
-
-
-
-
-
+*{margin:0;padding:0}@font-face{font-family:Roboto;src:local("../fonts/Roboto/Roboto-Regular.ttf") format("ttf");font-weight:400}@font-face{font-family:Quicksand;src:local("../fonts/Quicksand/Quicksand-Medium.ttf") format("ttf");src:url(https://fonts.googleapis.com/css2?display=swap&family=Quicksand%3Awght%40500) format("ttf");font-weight:400}@font-face{font-family:Quicksand;src:local("../fonts/Quicksand/Quicksand-Bold.ttf") format("ttf");font-weight:700}@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap");@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Quicksand:wght@600&display=swap");body{max-width:920px;height:auto}#logodesk{max-width:280px;max-height:186px}#container1{width:100%;background:#6316a3;padding-top:80px;display:inline-block;width:calc(100% - 1px)}#chamada1{font-family:Quicksand,sans-serif;font-weight:700;font-size:28px;padding-bottom:20px}#chamada1,#chamada2{text-align:left;color:#fff;max-width:640px}#chamada2{padding-top:20px;font-family:Roboto,sans-serif;font-weight:400;font-size:16px;padding-bottom:50px}#containerRelogio{width:100%;background:#6316a3;position:relative;min-height:210px;display:inline-block;width:calc(100% - 1px)}#relogio{width:320;height:186;background:#6316a3;position:absolute;bottom:0;right:0}#container2{background:#fff;padding-top:30px;padding-bottom:80px}#maratonaBeloved{font-family:Quicksand,sans-serif;font-weight:700;font-size:20px;color:#3f3e3e;text-align:center;text-transform:uppercase}#tresEmails{color:#3f3e3e}#ativText,#tresEmails{font-family:Roboto,sans-serif;font-weight:400;font-size:16px;text-align:center;padding-bottom:15px}#ativText{color:#646464}#ativImg{max-height:50;padding-bottom:15px}#container3{padding-top:50px;padding-bottom:50px;background:#74549f}#controleTempo{font-family:Quicksand,sans-serif;font-weight:700;font-size:20px;color:#fff;padding-bottom:15px;text-align:center;text-transform:uppercase}#dicasImg{max-height:40px}#dicas,#dicasImg{padding-bottom:15px}#dicas{font-family:Roboto,sans-serif;font-weight:400;font-size:16px;color:#fff;text-align:center}#container4{background:#6316a3;padding-top:15px;padding-bottom:10px}p{margin:0;padding-top:10px;color:#fff;font-size:20px;font-family:Quicksand,sans-serif;font-weight:700}#container5,p{text-align:center}#container5{padding-top:50px;padding-bottom:50px;background:#fff}#receba{font-family:Quicksand,sans-serif;font-weight:700;font-size:20px;color:#6316a3;padding-bottom:15px;text-align:center}#social{max-height:40px;padding-right:20px}#logodesk:hover,#social:hover{cursor:pointer;transform:translateY(-10px)}
