--- a/css/style_tks.css
+++ b/css/style_tks.css
@@ -1,115 +1,1 @@
-#logodesk {
-  max-width: 250px;
-  height: auto;
-}
-
-#social{
-  margin-top: 20px;
-  max-height: 60px;
-  padding-right: 30px;
-  float: right;
-}
-
-#cabecalho{
-  width: 100%;
-  height: 50px;
-}
-#intro{
-  background-color: #6316a3;
-  padding-bottom: 40px;
-}
-#intro2{
-  background-color:white;
-}
-#fra1{
-  margin-top: 60px;
-  color:white;
-  font-family: 'Quicksand', sans-serif;
-  font-size:61px;
-  font-weight: bold;
-  padding-top: 30px;
-  
-}
-#fra3{
-  padding-top: 20px;
-  color:#ffff;
-  font-family: 'Quicksand', sans-serif;
-  font-size:30px;
-  font-style:normal;
-  padding-bottom: 25px;
-}
-#fra{
-  padding-top: 20px;
-  padding-bottom: 50px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  color:white;
-  font-size:30px;
-}
-
-#fra2{
-  padding-top: 35px;
-  color:white;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size:30px;
-}
-#bot{
-  font-family: 'Roboto', sans-serif; 
-  font-weight: 400;
-  font-size:35px;
-}
-.btn{
-  width: 330px;
-  font-weight: bold;
-  border-radius: 10px;
-}
-
-a:active{
-    color:#74549f;
-    text-decoration: underline;
-}
-a:hover{
-    color:#646464;
-    text-decoration: underline;
-}
-
-.rede {
-    width: 80px;
-    height: 80px;
-    float: right;
-    margin-right: 20px;
-    transition: all 0,4s ease-out;
-    padding-top: 8px;
-    padding-left: 8px;
-}
-
-.rede#facebook{
-    background-color: #761498;
-    border-radius: 50%;
-}
-
-.rede#instagram{
-  background-color: #761498;
-  border-radius: 50%;
-}
-
-.rede:hover {
-  cursor: pointer;
-  transform: translateY(-10px);
-  box-shadow: 4px 30px 16px 0px rgba(50, 50, 50, 0.45)
-}
-
-.icone {
-  height: 60px;
-}
-
-#logodesk:hover {
-  cursor: pointer;
-  transform: translateY(-10px);
-}
-
-#social:hover {
-  cursor: pointer;
-  transform: translateY(-10px);
-}
+#logodesk{max-width:250px;height:auto}#social{margin-top:20px;max-height:60px;padding-right:30px;float:right}#cabecalho{width:100%;height:50px}#intro{background-color:#6316a3;padding-bottom:40px}#intro2{background-color:#fff}#fra1{margin-top:60px;color:#fff;font-family:Quicksand,sans-serif;font-size:61px;font-weight:700;padding-top:30px}#fra3{font-family:Quicksand,sans-serif;font-style:normal;padding-bottom:25px}#fra,#fra3{padding-top:20px;color:#fff;font-size:30px}#fra{padding-bottom:50px}#fra,#fra2{font-family:Roboto,sans-serif;font-weight:400}#fra2{padding-top:35px;color:#fff;font-size:30px}#bot{font-family:Roboto,sans-serif;font-weight:400;font-size:35px}.btn{width:330px;font-weight:700;border-radius:10px}a:active{color:#74549f}a:active,a:hover{text-decoration:underline}a:hover{color:#646464}.rede{width:80px;height:80px;float:right;margin-right:20px;transition:all 0,4s ease-out;padding-top:8px;padding-left:8px}.rede#facebook,.rede#instagram{background-color:#761498;border-radius:50%}.rede:hover{cursor:pointer;transform:translateY(-10px);box-shadow:4px 30px 16px 0 rgba(50,50,50,.45)}.icone{height:60px}#logodesk:hover,#social:hover{cursor:pointer;transform:translateY(-10px)}
